--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,27 +5,20 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:id="@+id/nested_scroll"
-        android:layout_height="match_parent"
-        tools:context=".SecondFragment">
+
 
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="200dp"
             android:id="@+id/main_layout"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
 
 
         </LinearLayout>
-    </ScrollView>
 
 
 
